<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyWeather</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_city_list">CityListActivity</string>
    <string name="default_title_city_name">北京天气</string>
    <string name="default_city_name">北京</string>
    <string name="default_issue_time">今天18:25发布</string>
    <string name="default_humidity">湿度75%</string>
    <string name="default_currentWendu">当前温度：</string>
    <string name="pm2.5_title">PM2.5</string>
    <string name="default_pm2.5_value">100</string>
    <string name="default_air_quality">重度污染</string>
    <string name="default_today_week_number">今天 星期三</string>
    <string name="default_today_temperature">-2℃~7℃</string>
    <string name="default_today_weather">晴转多云</string>
    <string name="default_today_wind_power">微风</string>
    <string name="default_title_name">当前城市：北京</string>
    <string name="search_editText">北京/beijing/bj</string>
    <string name="title_city_name">天气</string>
    <string name="issue_time">发布</string>
    <string name="humidity">湿度：</string>
    <string name="currentWendu">当前温度：</string>
    <string name="today_temperature">温度：</string>
    <string name="title_name">当前区域：</string>
    <string name="update_succeed">更新成功</string>
    <string name="today_week_number">星期</string>
    <string name="monday">一</string>
    <string name="tuesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="sunday">日</string>
    <string name="no_data">无数据</string>
    <string name="no_weather_info">没有此城市的天气信息</string>
    <string name="no_network">无法连接到网络。</string>
    <string name="no_picture">没有此天气的相关图.</string>
    <string name="title_activity_main_city">MainCityActivity</string>

</resources>
