<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="45.0dip"
        android:background="#ffcd2626"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/title_city_manager"
            android:layout_width="45.0dip"
            android:layout_height="45.0dip"
            android:src="@drawable/title_city" />

        <ImageView
            android:id="@+id/title_city_seperator"
            android:layout_width="1.0dip"
            android:layout_height="40dip"
            android:layout_marginTop="2.0dip"
            android:layout_toRightOf="@+id/title_city_manager"
            android:background="#A71717" />

        <TextView
            android:id="@+id/title_city_name"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@+id/title_city_seperator"
            android:gravity="center_vertical"
            android:paddingLeft="5.0dip"
            android:text="@string/default_title_city_name"
            android:textColor="#ffffffff"
            android:textSize="22.0sp" />

        <ImageView
            android:id="@+id/title_update_btn"
            android:layout_width="45.0dip"
            android:layout_height="45.0dip"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:src="@drawable/title_update" />

        <ImageView
            android:id="@+id/title_share"
            android:layout_width="45.0dip"
            android:layout_height="45.0dip"
            android:layout_toLeftOf="@+id/title_update_btn"
            android:src="@drawable/title_share" />

        <ImageView
            android:id="@+id/title_location"
            android:layout_width="45.0dip"
            android:layout_height="45.0dip"
            android:layout_toLeftOf="@+id/title_share"
            android:src="@drawable/base_action_bar_action_city" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:visibility="gone"
            style="@style/title_update_progressbar_style" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title"
        android:background="@drawable/biz_plugin_weather_shenzhen_bg"
        android:id="@+id/info">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:id="@+id/content_location">

            <TextView
                android:id="@+id/city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15.0dp"
                android:paddingTop="15.0dp"
                android:gravity="center_vertical"
                android:text="@string/default_city_name"
                android:textColor="#ffffffff"
                android:textSize="50.0sp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true" />

            <TextView
                android:id="@+id/issue_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/city_name"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:gravity="center_vertical"
                android:text="@string/default_issue_time"
                android:textColor="#ffffffff"
                android:textSize="20.0dp" />

            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/issue_time"
                android:paddingLeft="15dp"
                android:gravity="center"
                android:text="@string/default_humidity"
                android:textColor="#ffffffff"
                android:textSize="20.0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/currentWendu"
                android:layout_below="@id/humidity"
                android:paddingLeft="15dp"
                android:text="@string/default_currentWendu"
                android:textSize="20dp"
                android:textColor="#ffffff" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/content_location"
            android:id="@+id/content_pm">

            <ImageView
                android:id="@+id/pm2.5_pic"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentRight="true"
                android:paddingTop="15dp"
                android:paddingRight="15dp"
                android:src="@drawable/biz_plugin_weather_0_50" />

            <TextView
                android:id="@+id/pm2.5_title"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/pm2.5_pic"
                android:paddingTop="15dp"
                android:text="@string/pm2.5_title"
                android:textSize="22sp"
                android:textColor="#ffffffff" />

            <TextView
                android:id="@+id/pm2.5_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/pm2.5_pic"
                android:layout_below="@id/pm2.5_title"
                android:paddingRight="30dp"
                android:text="@string/default_pm2.5_value"
                android:textSize="30sp"
                android:textColor="#ffffffff" />

            <TextView
                android:id="@+id/air_quality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:gravity="center"
                android:text="@string/default_air_quality"
                android:textSize="25sp"
                android:textColor="#ffffffff"
                android:layout_toLeftOf="@id/pm2.5_pic"
                android:layout_below="@+id/pm2.5_value" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/weather_pic"
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:layout_below="@id/content_location"
            android:layout_gravity="center"
            android:src="@drawable/biz_plugin_weather_qing" />

        <RelativeLayout
            android:id="@+id/detail_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/content_pm"
            android:layout_toRightOf="@id/weather_pic">

            <TextView
                android:id="@+id/today_week_number"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:paddingTop="10dp"
                android:text="@string/default_today_week_number"
                android:textSize="30sp"
                android:textColor="#ffffffff" />

            <TextView
                android:id="@+id/today_temperature"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_below="@id/today_week_number"
                android:layout_alignParentLeft="true"
                android:gravity="left"
                android:text="@string/default_today_temperature"
                android:textSize="40sp"
                android:textColor="#ffffffff" />

            <TextView
                android:id="@+id/today_weather"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/default_today_weather"
                android:textSize="30sp"
                android:textColor="#ffffffff"
                android:layout_below="@id/today_temperature"
                android:layout_alignParentLeft="true" />

            <TextView
                android:id="@+id/today_wind_power"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/default_today_wind_power"
                android:textSize="30sp"
                android:textColor="#ffffffff"
                android:layout_below="@+id/today_weather"
                android:layout_alignParentLeft="true" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
